refatoração do codigo css para o scss

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -31,9 +31,9 @@
             </ul>
 
             <a class="nav__toggle" aria-label="Abrir menu" href="/">
-                <hr class="nav__bar">
-                <hr class="nav__bar">
-                <hr class="nav__bar">
+                <hr class="nav__toggle__bar">
+                <hr class="nav__toggle__bar">
+                <hr class="nav__toggle__bar">
             </a>
         </nav>
     </header>
